--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_analytics
 description: A barebones Analytics SDK to collect anonymous metadata from flutter apps.
 publish_to: none
-version: 7.5.3
+version: 7.5.4
 homepage: https://github.com/oakromulo/flutter_analytics
 repository: https://github.com/oakromulo/flutter_analytics.git
 issue_tracker: https://github.com/oakromulo/flutter_analytics/issues
@@ -11,8 +11,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  connectivity: ^3.0.6
-  device_info: ^2.0.2
+  connectivity_plus: ^2.3.9
+  device_info_plus: ^4.0.0
   devicelocale: ^0.5.0
   flutter:
     sdk: flutter
@@ -21,7 +21,7 @@ dependencies:
   flutter_udid: ^2.0.0
   http: ^0.13.3
   location: ^4.1.1
-  package_info: ^2.0.2
+  package_info_plus: ^1.4.2
   path_provider: ^2.0.2
   recase: ^4.0.0
   sim_info:
